# TerminalMCP

./: .gitignore  pty_proof.py  pyproject.toml  smoke_test.py
skill/terminal-mcp/: SKILL.md
src/terminal_mcp/: __init__.py  agent.py  auth.py  buffer.py  server.py  session.py
